[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/PlayerStatus.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/monogram_small.tres" type="DynamicFont" id=3]

[node name="PlayerStatus" type="HBoxContainer"]
margin_right = 600.0
margin_bottom = 48.0
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="HostIcon" type="TextureRect" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="SpectatorIcon" type="TextureRect" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_left = 70.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 140.0
margin_top = 10.0
margin_right = 329.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "User"

[node name="PingLabel" type="Label" parent="."]
margin_left = 349.0
margin_top = 10.0
margin_right = 391.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "0ms"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
margin_left = 411.0
margin_top = 10.0
margin_right = 600.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Connecting..."
align = 2
